# OASIS

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  functions.py  oasis.pyx  pyproject.toml  requirements.txt  setup.py  test_requirements.txt
.github/workflows/: ci.yml  release.yml  tests.yml
UNKNOWN.egg-info/: SOURCES.txt
examples/: Demo.ipynb  fig1.py  fig2.py  fig3.py  fig4.py  fig5.py  fig6.py  table1.py
oasis/: __init__.py  functions.py  oasis_methods.cpp  oasis_methods.pyx  plotting.py
oasis.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_deconvolution.py
